--- a/cloud-customer/src/main/resources/application.yml
+++ b/cloud-customer/src/main/resources/application.yml
@@ -1,2 +1,7 @@
 server:
   port: 8083
+eureka:
+  client:
+    register-with-eureka: false
+    service-url:
+      defaultZone: http://eureka9001.com:9001/eureka/,http://eureka9002.com:9002/eureka/,http://eureka9003.com:9003/eureka/
