--- a/cloud-provider-7001/src/main/resources/application.yml
+++ b/cloud-provider-7001/src/main/resources/application.yml
@@ -1,10 +1,29 @@
 server:
   port: 7001
-spring:
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    username: root
-    password: root
-    url: jdbc:mysql://127.0.0.1:3306/javastudy?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+
+# mybatis配置
 mybatis:
   mapper-locations: classpath:mapper/*.xml
+# spring配置
+spring:
+  application:
+    name: springcloud-provider
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/javastudy?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    username: root
+    password: root
+
+# Eureka的配置,服务注册到哪里
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka9001.com:9001/eureka/,http://eureka9002.com:9002/eureka/,http://eureka9003.com:9003/eureka/
+  instance:
+    instance-id: springcloud-provider-dept7001 # 修改eureka上的默认描述信息
+    prefer-ip-address: true
+
+# info配置
+info:
+  app.name: springcloud
+  company.name: ccahouse
