--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
         <module>cloud-api</module>
         <module>cloud-provider-7001</module>
         <module>cloud-customer</module>
+        <module>cloud-eureka-9001</module>
+        <module>cloud-eureka-9002</module>
+        <module>cloud-eureka-9003</module>
     </modules>
     <name>springcloud-study</name>
     <description>Demo project for Spring Boot</description>
@@ -17,6 +20,7 @@
     <properties>
         <java.version>1.8</java.version>
         <springboot.version>2.3.4.RELEASE</springboot.version>
+        <springcloud.version>1.4.6.RELEASE</springcloud.version>
         <mysql.version>8.0.21</mysql.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -44,7 +48,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.2.2.RELEASE</version>
+                <version>2.1.4.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -52,7 +56,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Hoxton.SR1</version>
+                <version>Greenwich.SR1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -120,6 +124,16 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory><!--所在的目录-->
+                <includes><!--包括目录下的.properties,.xml文件都会扫描到-->
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
     </build>
 
 </project>
