--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <module>cloud-eureka-9001</module>
         <module>cloud-eureka-9002</module>
         <module>cloud-eureka-9003</module>
+        <module>cloud-provider-7002</module>
+        <module>cloud-provider-7003</module>
+        <module>cloud-customer-feign</module>
     </modules>
     <name>springcloud-study</name>
     <description>Demo project for Spring Boot</description>
