--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>cloud-provider-7002</module>
         <module>cloud-provider-7003</module>
         <module>cloud-customer-feign</module>
+        <module>cloud-zuul-9527</module>
     </modules>
     <name>springcloud-study</name>
     <description>Demo project for Spring Boot</description>
