--- a/cloud-config-server-eureka/src/main/resources/application.yml
+++ b/cloud-config-server-eureka/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
         git:
           uri: https://gitee.com/fz972/springcoud-config.git
           search-paths: springcoud-config
-          username: 2279419934@qq.com
-          password: mx54321??
+#          username:
+#          password:
   application:
     name: springcoud-config
 
