--- a/cloud-config-client-eureka/src/main/resources/bootstrap.yml
+++ b/cloud-config-client-eureka/src/main/resources/bootstrap.yml
@@ -1,5 +1,3 @@
-server:
-  port: 3004
 spring:
   cloud:
     config:
@@ -8,9 +6,8 @@ spring:
       discovery:
         enabled: true #是从配置中心读取文件
         service-id: springcoud-config #配置中心的servieId，服务名称，通过服务名称去 Eureka注册中心找服务
+      name: config-client-eureka #git仓库文件名 默认application
   #      uri: http://localhost:3001
-  application:
-    name: springcoud-config-client-eureka
 
 eureka:
   client:
@@ -20,7 +17,3 @@ eureka:
   instance:
     instance-id: springcoud-config
     prefer-ip-address: true
-
-info:
-  app.name: springcloudconfig
-  company.name: ccahouse
